# ETH-Bucharest-2025

./: BusinessPlan.md  README.md
backend/: Cargo.toml
backend/src/: main.rs
contracts/: Cargo.toml  IVotingSystem.sol  contract-abi.json  test_vote.sh
contracts/src/: lib.rs
frontend/: LOCAL_ARBITRUM.md  contract-abi.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/create-vote/: page.tsx
frontend/app/demo/: page.tsx
frontend/app/faq/: page.tsx
frontend/app/features/: page.tsx
frontend/app/how-it-works/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/app/vote/: page.tsx
frontend/app/votes/: page.tsx
frontend/app/votes/[id]/: not-found.tsx  page.tsx
frontend/app/wallet-demo/: page.tsx
frontend/components/: client-providers.tsx  mobile-menu.tsx  site-header.tsx  site-layout.tsx  wallet-header.tsx  wallet-provider.tsx
frontend/hooks/: use-wallet-context.tsx  use-wallet-store.ts
frontend/lib/: config.ts  contract.ts  environment-switcher.ts  rust-api.ts  utils.ts  wagmi.ts
